// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FiatOrders removes authentication URL after successful navigation 1`] = `
<View
  style={
    {
      "height": 0,
      "width": 0,
    }
  }
>
  <View
    onHttpError={[Function]}
    onNavigationStateChange={[Function]}
    source={
      {
        "uri": "https://test.metamask.io/auth",
      }
    }
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />
</View>
`;

exports[`FiatOrders renders correctly with authentication URLs 1`] = `
<View
  style={
    {
      "height": 0,
      "width": 0,
    }
  }
>
  <View
    onHttpError={[Function]}
    onNavigationStateChange={[Function]}
    source={
      {
        "uri": "https://test.metamask.io/auth",
      }
    }
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />
  <View
    onHttpError={[Function]}
    onNavigationStateChange={[Function]}
    source={
      {
        "uri": "https://test.metamask.io/auth2",
      }
    }
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />
</View>
`;

exports[`FiatOrders renders correctly with no orders 1`] = `null`;
